# Awl

./: .gitignore  Awl.sln  CMakeLists.txt  README.md
Awl/: Aggregator.h  Algorithm.h  Awl.vcxproj  Awl.vcxproj.filters  BitMap.h  Cancellation.h  Combinator.h  CompositeCompare.h  ConsoleLogger.h  DataCast.h  Decimal.h  Decimal128.h  DecimalConstants.h  DecimalData.h  DecimalTime.h  Destructible.h  DoubleIterator.h  DoubleNodeIterator.h  EnumTraits.h  EquatableFunction.h  Exception.h  Factory.h  FixedString.h  ForeignSet.h  FormatRange.h  Formatter.h  FunctionTraits.h  GeneralObservable.h  Getters.h  Hash.cpp  Hash.h  Hashable.h  HybridMap.h  HybridSet.h  Inserter.h  Int2Array.h  IntRange.h  InvocableObservable.h  KeyCompare.h  Lang.h  (+68 more)
Awl/Awl/: Observable.h  QuickList.h  SingleList.h  UpdateQueue.h
Awl/Coro/: AsyncGenerator.h  Controller.cpp  Controller.h  Generator.h  ProcessTask.h  TaskMap.h  TaskPool.cpp  TaskPool.h  TaskSink.h  UpdatePromise.cpp  UpdatePromise.h  UpdateTask.cpp  UpdateTask.h
Awl/CppStd/: StringView.h  Thread.h  ThreadIdFormatter.h
Awl/Crypto/: BasicHash.h  Crc64.cpp  Crc64.h  FixedHash.h  IntHash.h  OpenSslHash.h
Awl/Experimental/: SignalOnObservable.h
Awl/Io/: AtomicStorage.cpp  AtomicStorage.h  BasicReader.h  BufferedStream.h  Context.h  EuphoricallySerializable.h  FakeContext.h  FieldMap.h  HashStream.h  HashingSerializable.h  HashingSnapshot.h  HeaderedSerializable.h  IoException.h  MeasureStream.h  Metadata.h  MpHelpers.h  OptionalStorage.cpp  OptionalStorage.h  PersistentObject.cpp  PersistentObject.h  PlainReader.h  PlainSerializable.h  Prototype.h  PrototypeContainer.h  ReadWrite.h  Reader.h  RwAdapters.h  RwHelpers.h  SequentialStream.h  Serializable.h  SerializationContext.h  Serializer.h  Snapshotable.h  StdStream.h  Stream.h  TypeDescriptor.h  TypeHash.h  TypeIndex.h  TypeName.h  VectorStream.h  (+3 more)
Awl/Mp/: ExtractElementTypes.h  FlattenTuple.h  Mp.h  TupleToVariant.h  TypeCollector.h  TypeConverter.h  TypeDescriptor.h  TypeHash.h  VariantFromStructs.h
Awl/Testing/: AttributeProvider.h  CommandLineProvider.cpp  CommandLineProvider.h  CompositeProvider.h  Formatter.h  JsonProvider.h  LambdaTest.h  LocalAttribute.h  OutputStream.h  ScalarFormatter.h  TestChain.h  (+13 more)
CMake/: AwlBoost.cmake  AwlCompilerOptions.cmake  AwlConfig.cmake  AwlIdeSupport.cmake  AwlLink.cmake  AwlNativePlatform.cmake  AwlOpenSsl.cmake  AwlQt.cmake  AwlThreads.cmake
Doc/: VtsTests.json
Docs/: Observable.md  Observable_vs_Signal.md  Signal.md
Main/: main.cpp
PlatformTests/: NativeStreamTest.cpp
TestRuns/: VtsLongTest.json  VtsShortTest.json
Tests/: AggregatorTest.cpp  AtomicStorageTest.cpp  BenchmarkHelpers.cpp  BenchmarkHelpers.h  BitMapTest.cpp  CancellationTest.cpp  ClangFalseWarningTest.cpp  CompositeCompareTest.cpp  CoroAsyncGeneratorTest.cpp  CoroFibonacciTest.cpp  CoroMsvcDestructorBugFix.cpp  CoroTimerNonOwningTest.cpp  CoroTimerTest.cpp  CppVersionExample.cpp  DecimalTest.cpp  EquatableFunctionTest.cpp  ExceptionTest.cpp  FlatMapBenchmark.cpp  ForeignSetTest.cpp  FormatterTest.cpp  HashBenchmark.cpp  HashStreamTest.cpp  HashTest.cpp  HybridSetTest.cpp  ImmutableTest.cpp  ImplicitLifetimeTest.cpp  IntRangeTest.cpp  IntervalMapTest.cpp  ListTest.cpp  LoggerTest.cpp  MemoryStream.h  MirrorSetTest.cpp  MpTest.cpp  ObjectPoolTest.cpp  ObservableFunctionTest.cpp  ObservableSetTest.cpp  ObservableTest.cpp  PersistentObjectTest.cpp  PrototypeTest.cpp  ReflectionTest.cpp  (+28 more)
(+104 files in other folders)
